--- a/index.html
+++ b/index.html
@@ -10,18 +10,29 @@
         .row{
             margin-top: 25vh;
         }
+
+        h1{
+            margin-top: 0;
+        }
     </style>
 </head>
 <body>
     <div class="row">
         <div class="col s8 offset-s2">
+            <div id="message-show" class="card-panel hide">
+                <h1></h1>
+                <div>
+                    <a href="./index.html">Create your own Secret Message</a>
+                </div>
+            </div>
+
             <div id="message-form" class="card-panel">
                 <form action="">
                     <label for="">Enter a Secret Message</label>
                     <input id="message-input" type="text">
                     <button class="btn">Create Link</button>
                 </form>
-            </div    >
+            </div>
 
             <div id="link-form" class="card-panel hide">
                 <div>
